--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Sandwich</h1>
-        <img src="..//images/sandwich.jpg" alt="delicious sandwich">
+        <img src="../images/sandwich.jpg" alt="delicious sandwich">
         <h2><em><strong>Description</h2></strong></em>
         <p>You may think that this is a simple sandwich but in simplicity lies the 
             beauty of flavor.
