--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <h1>Odin recipes</h1>
-        <img src="..//images/chef.jpeg" alt="chef cooking" width="600" height="600">
+        <img src="images/chef.jpeg" alt="chef cooking" width="600" height="600">
         <h2><em><strong>Recipes</strong></em></h2>
         <ul>
-            <li><a href="..//recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="..//recipes/sandwich.html">Sandwich</a></li>
-            <li><a href="..//recipes/scrambled-eggs.html">Scrambled eggs</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/sandwich.html">Sandwich</a></li>
+            <li><a href="recipes/scrambled-eggs.html">Scrambled eggs</a></li>
         </ul>
         
     </body>
