--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Scrambled eggs</h1>
 
-        <img src="..//images/Scrambled-eggs.jpg" alt="Delicious scrambled eggs" width="500" height="600">
+        <img src="../images/Scrambled-eggs.jpg" alt="Delicious scrambled eggs" width="500" height="600">
 
         <h2><em><strong>Description</strong></em></h2>
         <p>Now here is a thing of beauty the breakfast of millions around the world</p>
