changed index html
changed the icons and organized them

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,45 +3,51 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="../stylesheet.css">
     </head>
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/Lasagne_-_stonesoup.jpg" alt="Delicious lasagna" width="500" height="600">
-        <h2><em><strong>Description</strong></em></h2>
-        <p>A recipe for an easy, delicious homemade lasagna, that will have the italians and everyone
-            else saying MAMMA MIA!</p>
+        <div class="header">
+            <h1>Lasagna</h1>
+            <img class= 'image-recipe' src="../images/Lasagne_-_stonesoup.jpg" alt="Delicious lasagna" width="300px" height="300px">
+        </div>
+        <div clas="intro text"></div>
+            <h2><em><strong>Description</strong></em></h2>
+            <p>A recipe for an easy, delicious homemade lasagna, that will have the italians and everyone
+                else saying MAMMA MIA!</p>
 
-        <p>Homemade lasagna may have a few steps, but each step is easy and I assure you its worth the time; 
-            the perfect Italian meal! </p>
+            <p>Homemade lasagna may have a few steps, but each step is easy and I assure you its worth the time; 
+                the perfect Italian meal! </p>
 
-        <p>The best lasagna recipe is made with ingredients that you know, and its not difficult at all! 
-            All youll need for this easy lasagna recipe is one pan, one bowl, and a 9x13 baking dish!</p>
-        
-        <h2><em>Ingredients</em></h2>
+            <p>The best lasagna recipe is made with ingredients that you know, and its not difficult at all! 
+                All youll need for this easy lasagna recipe is one pan, one bowl, and a 9x13 baking dish!</p>
+        </div>
+        <div class="content-recipe">
+            <h2><em>Ingredients</em></h2>
             
-        <ul>
-            <li>Pasta sauce</li>
-            <li>Spices</li>
-            <li>Garlic</li>
-            <li>Ricota cheese</li>
-            <li>Beef</li>
-            <li>Sausage</li>
-            <li>egg</li>
-            <li>Mozzarella</li>
-            <li>Lasagna</li>
-            <li>Parsley</li>
-            <li>Onion</li>
-            <li>Tomato paste</li>
-            <li>Parmesan</li>
-        </ul>  
-        <h2><em>Steps</em></h2> 
-        <ol>
-            <li>Boil pasta: Cook in a large pot of salted water</li>
-            <li>Prepare meat sauce: Cook sausage and beef with onion and garlic. Drain well, add the pasta sauce & simmer it for a few minutes to thicken.</li>
-            <li>Combine cheese mixture: Stir the cheese mixture together in a bowl.</li>
-            <li>
-                Layer & bake: Layer the meat sauce and cheese mixture with lasagna noodles and bake until browned and bubbly.</li>
-        </ol> 
+            <ul>
+                <li>Pasta sauce</li>
+                <li>Spices</li>
+                <li>Garlic</li>
+                <li>Ricota cheese</li>
+                <li>Beef</li>
+                <li>Sausage</li>
+                <li>egg</li>
+                <li>Mozzarella</li>
+                <li>Lasagna</li>
+                <li>Parsley</li>
+                <li>Onion</li>
+                <li>Tomato paste</li>
+                <li>Parmesan</li>
+            </ul>  
+            <h2><em>Steps</em></h2> 
+            <ol>
+                <li>Boil pasta: Cook in a large pot of salted water</li>
+                <li>Prepare meat sauce: Cook sausage and beef with onion and garlic. Drain well, add the pasta sauce & simmer it for a few minutes to thicken.</li>
+                <li>Combine cheese mixture: Stir the cheese mixture together in a bowl.</li>
+                <li>
+                    Layer & bake: Layer the meat sauce and cheese mixture with lasagna noodles and bake until browned and bubbly.</li>
+            </ol> 
+        </div>
         <p><a href="..//index.html">Home</a></p>
     </body>
 </html>
