--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,7 +10,7 @@
             <h1>Lasagna</h1>
             <img class= 'image-recipe' src="../images/Lasagne_-_stonesoup.jpg" alt="Delicious lasagna" width="300px" height="300px">
         </div>
-        <div clas="intro text"></div>
+        <div clas="intro-text">
             <h2><em><strong>Description</strong></em></h2>
             <p>A recipe for an easy, delicious homemade lasagna, that will have the italians and everyone
                 else saying MAMMA MIA!</p>
