--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -3,30 +3,35 @@
     <head>
         <meta charset="utf-8">
         <title>Sandwich</title>
+        <link rel="stylesheet" href="../stylesheet.css">
     </head>
     <body>
-        <h1>Sandwich</h1>
-        <img src="../images/sandwich.jpg" alt="delicious sandwich">
+        <div class="header">
+            <h1>Sandwich</h1>
+            <img src="../images/sandwich.jpg" alt="delicious sandwich" width="300px" height="300px" >
+            
+        </div>
         <h2><em><strong>Description</h2></strong></em>
         <p>You may think that this is a simple sandwich but in simplicity lies the 
             beauty of flavor.
         </p>
-
-        <h2><em>Ingredients</em></h2>
-        <ul>
-            <li>2 slices of bread</li>
-            <li>Baloney</li>
-            <li>Lettuce</li>
-            <li>Mozzarela cheese slice</li>
-        </ul>
-        <h2><em>Steps</em></h2> 
-        <ol>
-            <li>Put the baloney on a slice of bread.</li>
-            <li>Put the lettuce on the baloney.</li>
-            <li>Put the mozzarela cheese on the lettuce.</li>
-            <li>put the second slice of bread on the mozzarela slice.</li>
-            <li>eat.</li>
-        </ol>
+        <div class="content-recipe">
+            <h2><em>Ingredients</em></h2>
+         <ul>
+                <li>2 slices of bread</li>
+                <li>Baloney</li>
+                <li>Lettuce</li>
+                <li>Mozzarela cheese slice</li>
+            </ul>
+            <h2><em>Steps</em></h2> 
+            <ol>
+                <li>Put the baloney on a slice of bread.</li>
+                <li>Put the lettuce on the baloney.</li>
+                <li>Put the mozzarela cheese on the lettuce.</li>
+                <li>put the second slice of bread on the mozzarela slice.</li>
+                <li>eat.</li>
+            </ol>
+        </div>
         <p><a href="..//index.html">Home</a></p>
     </body>
 
