--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -48,6 +48,6 @@
                     Layer & bake: Layer the meat sauce and cheese mixture with lasagna noodles and bake until browned and bubbly.</li>
             </ol> 
         </div>
-        <p><a href="..//index.html">Home</a></p>
+        <p class="home"><a href="..//index.html">Home</a></p>
     </body>
 </html>
