--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -32,7 +32,7 @@
                 <li>eat.</li>
             </ol>
         </div>
-        <p><a href="..//index.html">Home</a></p>
+        <p class="home"><a href="..//index.html">Home</a></p>
     </body>
 
 </html>
