--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -29,6 +29,6 @@
                 <li>Eat.</li>
             </ol>
     </div>
-        <p><a href="..//index.html">Home</a></p>
+        <p class="home"><a href="..//index.html">Home</a></p>
     </body>
 </html>
